tests/ui/typeck/receive.stderr
error: `public` not allowed here; allowed values: external
  --> ROOT/tests/ui/typeck/receive.sol:LL:CC
   |
LL |     receive() public payable {}
   |               ^^^^^^
   |

error: `view` not allowed here; allowed values: payable
  --> ROOT/tests/ui/typeck/receive.sol:LL:CC
   |
LL |     receive() external view {}
   |                        ^^^^
   |

error: `pure` not allowed here; allowed values: payable
  --> ROOT/tests/ui/typeck/receive.sol:LL:CC
   |
LL |     receive() external pure {}
   |                        ^^^^
   |

error: libraries cannot have receive ether functions
  --> ROOT/tests/ui/typeck/receive.sol:LL:CC
   |
LL |     receive() external payable {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

error: receive ether function must be payable
  --> ROOT/tests/ui/typeck/receive.sol:LL:CC
   |
LL |     receive() external {}
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `payable` state mutability

error: receive ether function cannot take parameters
  --> ROOT/tests/ui/typeck/receive.sol:LL:CC
   |
LL |     receive(uint256 x) external payable {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

error: aborting due to 6 previous errors

